--- a/src/app/modules/performance/pages/key-result-area/key-result-area.component.html
+++ b/src/app/modules/performance/pages/key-result-area/key-result-area.component.html
@@ -11,11 +11,11 @@
         [loading]="loading"
         (pageChange)="loadNewPage($event)"
       ></ngx-tablecomponent>
-    </div><ngx-side-modal [(show)]="showModal" [isPage]="true">
+    </div><ngx-side-modal [(show)]="showModal">
       <div modal-header>New Key Result Area</div>
       <div modal-body>
         
-        <div class="linear-form">
+        <div class="">
             
             <div class="form-group">
                 <label>Performance Cycle</label>
