--- a/src/app/@theme/styles/styles.scss
+++ b/src/app/@theme/styles/styles.scss
@@ -118,11 +118,15 @@ h1{
 }
 
 .linear-form .form-group > label{
-  width: 40%;
+  width: 20%;
 }
 .linear-form .form-group > .form-control{
-  width: unset;
-  flex: auto;
+  width: 50%;
+  // flex: auto;
+}
+.linear-form .form-group > *:nth-child(2){
+  width: 50%;
+  // flex: auto;
 }
 
 .form-control[type='checkbox']{
