--- a/src/app/modules/performance/pages/performance-management-cycle/performance-management-cycle.component.html
+++ b/src/app/modules/performance/pages/performance-management-cycle/performance-management-cycle.component.html
@@ -1,113 +1,116 @@
 <ngx-componentsheader
-          pageName="Performance Management Cycle"
-          [requiredButton]="topActionButtons"
-          (buttonClick)="pageActionClicked($event)"
-        ></ngx-componentsheader><div class="main-page-container"><ngx-tableheader *ngIf="!showEmpty"></ngx-tableheader><ngx-default-content *ngIf="showEmpty" pageHeader="Create your first Cycle" pageDescription="Click on the button to create a performance cycle" buttonValue="Create Cycle" (buttonClick)="createNewClicked()">
+  pageName="Performance Management Cycle"
+  [requiredButton]="topActionButtons"
+  (buttonClick)="pageActionClicked($event)"
+></ngx-componentsheader>
+<div class="main-page-container">
+  <ng-template [ngIf]="!showModal">
+    <ngx-tableheader *ngIf="!showEmpty"></ngx-tableheader
+    ><ngx-default-content
+      *ngIf="showEmpty"
+      pageHeader="Create your first Cycle"
+      pageDescription="Click on the button to create a performance cycle"
+      buttonValue="Create Cycle"
+      (buttonClick)="createNewClicked()"
+    >
     </ngx-default-content>
-      <ngx-tablecomponent
-        *ngIf="!showEmpty"
-        [tableColum]="tableColumns"
-        [userData]="tableData"
-        [loading]="loading"
-        (pageChange)="loadNewPage($event)"
-      ></ngx-tablecomponent>
-    </div><ngx-side-modal [(show)]="showModal" [isPage]="true" title='New Performance Cycle'>
-      <div modal-header></div>
-      <div modal-body>
-        
-        <div class="linear-form">
-            
-            <div class="form-group">
-                <label>Review Purpose</label>
-                <select class="form-control"></select>
-            </div>
-            
-
-            <div class="form-group">
-                <label>Description</label>
-                <input class="form-control"/>
-            </div>
-            
-
-            <div class="form-group">
-                <label>Cycle Name</label>
-                <input class="form-control"/>
-            </div>
-            
-
-            <div class="form-group">
-                <label>Appraisal Period Date</label>
-                <ngx-date-range></ngx-date-range>
-            </div>
-            
-
-            <div class="form-group">
-                <label>Appraisal Due Date</label>
-                <ngx-date></ngx-date>
-            </div>
-            
-
-            <div class="form-group">
-                <label>Period Under Review</label>
-                <ngx-date></ngx-date>
-            </div>
-            
-
-            <div class="form-group">
-                <label>Appraisal Type</label>
-                <ngx-radio-button [items]="['Self Appraisal', '180 Appraisal', '360 Appraisal']"></ngx-radio-button>
-            </div>
-            
-
-            <div class="form-group">
-                <label>Rating Type</label>
-                <ngx-radio-button [items]="['Open Ended', 'Close Ended']"></ngx-radio-button>
-            </div>
-            
-
-            <div class="form-group">
-                <label>Close Ended</label>
-                <div>
-                    <input class="form-control">
-                    <div style="margin: 1rem;"></div>
-                    <input class="form-control">
-                </div>
-            </div>
-            
-
-            <div class="form-group">
-                <label>Department</label>
-                <select class="form-control"></select>
-            </div>
-            
-
-            <div class="form-group">
-                <label>Unit/Division</label>
-                <select class="form-control"></select>
-            </div>
-            
-
-            <div class="form-group">
-                <label>Location</label>
-                <select class="form-control"></select>
-            </div>
-            
-
-            <div class="form-group">
-                <label>Mark as Active</label>
-                <input type='checkbox'/>
-            </div>
-
-            <hr/>
-            <h4>Approval Workflow</h4>
-            <ngx-workflow></ngx-workflow>
-            
+    <ngx-tablecomponent
+      *ngIf="!showEmpty"
+      [tableColum]="tableColumns"
+      [userData]="tableData"
+      [loading]="loading"
+      (pageChange)="loadNewPage($event)"
+    ></ngx-tablecomponent>
+  </ng-template>
+  <div *ngIf="showModal" title="New Performance Cycle">
+    <div modal-header></div>
+    <div modal-body>
+      <div class="linear-form">
+        <div class="form-group">
+          <label>Review Purpose</label>
+          <select class="form-control" [(ngModel)]="editingData.reviewPurposeId"></select>
         </div>
-        
+
+        <div class="form-group">
+          <label>Description</label>
+          <ngx-wysisyg-input [(value)]="editingData.description"></ngx-wysisyg-input>
+        </div>
+
+        <div class="form-group">
+          <label>Cycle Name</label>
+          <input class="form-control" [(ngModel)]="editingData.name" />
+        </div>
+
+        <div class="form-group">
+          <label>Appraisal Period Date</label>
+          <ngx-date-range></ngx-date-range>
+        </div>
+
+        <div class="form-group">
+          <label>Appraisal Due Date</label>
+          <ngx-date></ngx-date>
+        </div>
+
+        <div class="form-group">
+          <label>Period Under Review</label>
+          <ngx-date [(value)]="editingData.periodUnderReview"></ngx-date>
+        </div>
+
+        <div class="form-group">
+          <label>Appraisal Type</label>
+          <ngx-radio-button
+            [items]="['Self Appraisal', '180 Appraisal', '360 Appraisal']"
+            [(value)]="editingData.appraisalTypeId"
+          ></ngx-radio-button>
+        </div>
+
+        <div class="form-group">
+          <label>Rating Type</label>
+          <ngx-radio-button
+            [items]="['Open Ended', 'Close Ended']"
+            [(value)]="editingData.ratingTypeId"
+          ></ngx-radio-button>
+        </div>
+
+        <div class="form-group">
+          <label>Close Ended</label>
+          <div style="display: flex;">
+            <input class="form-control" [(ngModel)]="editingData.minRating" />
+            <div style="margin: 1rem"></div>
+            <input class="form-control" [(ngModel)]="editingData.maxRating" />
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label>Department</label>
+          <ngx-multi-select [(value)]="editingData.departmentId" [singleSelection]="true" [choice_name]="ChoiceName.departments"></ngx-multi-select>
+        </div>
+
+        <div class="form-group">
+          <label>Unit/Division</label>
+          <ngx-multi-select [(value)]="editingData.unitId" [singleSelection]="true" [choice_name]="ChoiceName.departments"></ngx-multi-select>
+        </div>
+
+        <div class="form-group">
+          <label>Location</label>
+          <ngx-multi-select [(value)]="editingData.locationId" [singleSelection]="true" [choice_name]="ChoiceName.locations"></ngx-multi-select>
+        </div>
+
+        <div class="form-group">
+          <label>Mark as Active</label>
+          <input type="checkbox" [(ngModel)]="editingData.isActive" />
+        </div>
+
+        <hr />
+        <h4>Approval Workflow</h4>
+        <ngx-workflow></ngx-workflow>
       </div>
-      <div modal-actions>
-        <button nbButton status="primary" >Save</button>
-        <button nbButton status="primary" outline style="background: transparent;">Cancel</button>
-      </div>
-    </ngx-side-modal>
-    
+    </div>
+    <div modal-actions>
+      <button nbButton status="primary">Save</button>
+      <button nbButton status="primary" outline style="background: transparent">
+        Cancel
+      </button>
+    </div>
+  </div>
+</div>
