--- a/src/app/modules/requests-and-complaints/main/main.component.html
+++ b/src/app/modules/requests-and-complaints/main/main.component.html
@@ -54,6 +54,10 @@
     <div modal-header>Create New</div>
     <div modal-body>
         <div class="form-group">
+            <label>Title</label>
+            <input [(ngModel)]="newComplaint.title" class="form-control"/>
+        </div>
+        <div class="form-group">
             <label>Type</label>
             <select [(ngModel)]="newComplaint.type" class="form-control">
                 <option value="5">Complaint</option>
@@ -62,15 +66,16 @@
         </div>
         <div class="form-group">
             <label>Reciepent</label>
-            <input class="form-control"/>
+            <ngx-employee-master-search [(value)]="newComplaint.employeeId"></ngx-employee-master-search>
         </div>
         <div class="form-group">
             <label>Description</label>
-            <ngx-wysisyg-input></ngx-wysisyg-input>
+            <ngx-wysisyg-input [(value)]="newComplaint.description"></ngx-wysisyg-input>
         </div>
     </div>
     <div modal-actions>
-        <button nbButton status="primary">Submit</button>
+        <ngx-loadable-button (click)="submitForm()" [loading]="loadingSave" style="margin-right: 1rem;">Submit</ngx-loadable-button>
+        <!-- <button nbButton status="primary"></button> -->
         <button nbButton outline status="primary">Discard</button>
         <button>Attach</button>
     </div>
