--- a/src/app/components/tableheader/tableheader.component.html
+++ b/src/app/components/tableheader/tableheader.component.html
@@ -71,7 +71,7 @@
         <input (change)="fieldValueChanged($event, field.name)" class="form-control"/>
       </div>
       <div class="form-group col-sm-4">
-        <label></label>
+        <div style="padding-top: 30px;">
         <input nbButton status='primary' value='Submit' type='button' (click)="submitFilter()"/>
       </div>
     </div>
