--- a/src/app/modules/leave/leaveyear/leaveyear.component.html
+++ b/src/app/modules/leave/leaveyear/leaveyear.component.html
@@ -16,6 +16,7 @@
         <ngx-tablecomponent  
         *ngIf="!showEmpty"
         (filterChange)="filterUpdated($event)"
+        [showActions]="true"
         [showFilter]="true"
         (actionClick)="tableActionClicked($event)"
         [actions]="tableActions" 
