--- a/src/app/modules/disbursement/overall-budget/overall-budget.component.html
+++ b/src/app/modules/disbursement/overall-budget/overall-budget.component.html
@@ -56,7 +56,7 @@
               "
             >
               <span class="gray-1">Total budget</span>
-              <span class="header5-bold">{{finYear.amount | currency:'NGN':'symbol'}}</span>
+              <span class="header5-bold">{{finYear.totalBudgetAmount | currency:'NGN':'symbol'}}</span>
             </div>
           </div>
         </div>
@@ -120,9 +120,9 @@
         "
       >
         <h5>{{budget.budget_item}}</h5>
-        <div style="font-size: 1.3rem">{{budget.amount | currency:'NGN':'symbol'}}</div>
+        <div style="font-size: 1.3rem">{{budget.totalBudget | currency:'NGN':'symbol'}}</div>
         <div style="text-align: right; font-size: 1rem" class="grey">
-          {{budget.spent | currency:'NGN':'symbol'}} spent
+          {{budget.totalBudget | currency:'NGN':'symbol'}} spent
         </div>
         <div>
           <div class="progress" style="height: 0.5rem;">
@@ -322,14 +322,14 @@
     <div class="form-group row">
       <div class="col">
         <label>Financial Year</label>
-      <ngx-date-range style="width: 60%;" [(start)]="finYear.financial_year_start" [(end)]="finYear.financial_year_end"></ngx-date-range>
+      <ngx-date-range style="width: 60%;" [(start)]="finYear.startDate" [(end)]="finYear.endDate"></ngx-date-range>
       </div>
 
     </div>
     <div class="form-group row">
      <div class="col">
       <label>Total amount</label>
-      <app-amount-input [(value)]="finYear.amount"></app-amount-input>
+      <app-amount-input [(value)]="finYear.totalBudgetAmount"></app-amount-input>
      </div>
     </div>
     <div class="form-group row" style="margin-top: 20px">
