--- a/src/app/components/tablecomponent/tablecomponent.component.html
+++ b/src/app/components/tablecomponent/tablecomponent.component.html
@@ -36,7 +36,7 @@
               <div class="row">
                 <div class="col-sm-12">
                   <nb-list>
-                    <nb-list-item *ngFor="let act of actions" (click)='customActionClicked(act, data)'>
+                    <nb-list-item *ngFor="let act of actions" (click)='customActionClicked(act, data)' style="cursor: pointer;">
                       {{ act.label }}
                     </nb-list-item>
                   </nb-list>
