--- a/src/app/modules/leave/leaveyear/leaveyear.component.html
+++ b/src/app/modules/leave/leaveyear/leaveyear.component.html
@@ -10,6 +10,7 @@
         pageHeader="Create your first Leave Year"
         pageDescription="Click on the button to create a Leave Year"
         buttonValue="Create Leave Year"
+        [loading]="loading"
         (buttonClick)="modal('add_leave_year')"
       >
       </ngx-default-content>
@@ -24,6 +25,7 @@
         [tableColum]="tableColumns"
         [totalItems]="totalItems"
         [currentPage]="currentPage"
+        [loading]="loading"
         >
     </ngx-tablecomponent>
         
@@ -46,7 +48,7 @@
                             <div>Leave Year Start Date is required</div>
                         </div>
                       </div>
-                      <div class="form-group">
+                      <div class="form-group" >
                         <label for="Minimum Number Of Days" style="font-size: small;font-weight: bold;">End Date:</label>
                         <ngx-date [(value)]='newleaveYear.yearEndDate' #yearEndDate [min]="newleaveYear.yearStartDate" name="yearEndDate" id="yearEndDate"></ngx-date>
                         <div *ngIf="!validateEnddate" class="error">
@@ -60,7 +62,9 @@
                 </form>
             </div>
             <div modal-actions class="d-flex" style="display: flex; flex-direction: row; justify-content: center; margin-top: 40px; margin-bottom: 60px;">
-                <button *ngIf="!submitbtnPressed" [disabled]="!formvalidate" nbButton status="primary" (click)="createleaveYear()" class="d-flex column">Submit</button>
+                <button *ngIf="!submitbtnPressed" [disabled]="!formvalidate" nbButton status="primary" (click)="createleaveYear()" class="d-flex column"><span *ngIf="!modificationStatus">Submit</span>
+                <span *ngIf="modificationStatus">Modify</span>
+                </button>
                 <button *ngIf="submitbtnPressed" nbButton status="primary" class="d-flex column">Processing &nbsp; <i class="fa fa-spin fa-spinner"></i></button>
                 <button nbButton outline status="primary" (click)="showLeaveYearModal = false" class="d-flex column"
                   style="background-color: white;">Discard</button>
